--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
     "@biomejs/biome": "1.9.4",
+    "@eslint/eslintrc": "^3.3.1",
     "@types/node": "^20.17.30",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.7",
     "postcss": "^8.5.3",
+    "sharp": "^0.34.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
